# python-mcp

./: README.md  pyproject.toml
src/python_mcp/spacex/: __init__.py  server.py
src/python_mcp/weather/: server.py
